# nest_ai_recorder

./: .gitignore  Dockerfile  README.md  docker-compose.yml  hacs.json  repository.yaml
addon/: Dockerfile  config.yaml  run.sh
config/: config.example.yaml  config.ha.example.yaml  go2rtc.example.yaml
custom_components/nest_ai_recorder/: __init__.py  config_flow.py  const.py  manifest.json  sensor.py  strings.json  switch.py
docs/: api.md  installation.md  mqtt.md  troubleshooting.md
nest_ai_recorder/: Dockerfile  config.yaml  run.sh
nest_ai_recorder/app/: README.md  pyproject.toml  requirements.txt
nest_ai_recorder/app/src/nest_ai_recorder/: __init__.py  cli.py  dashboard.py  detection.py  frame_source.py  geometry.py  mqtt.py  pipeline.py  recorder.py  segments.py  service.py  stats.py
src/nest_ai_recorder/: cleanup.py  cli.py  clips.py  config.py  detection.py  events.py  frame_source.py  logging.py  mqtt.py  pipeline.py  recorder.py  segments.py  service.py
tests/: test_clips.py  test_config.py  test_detection.py  test_events.py  test_mqtt_clips.py  test_pipeline.py  test_segments.py
