[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nest-ai-recorder"
version = "0.1.0"
description = "Local AI recording pipeline for Nest cameras via go2rtc and Home Assistant."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.8",
    "pydantic-settings>=2.3",
    "PyYAML>=6.0",
    "python-json-logger>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "ruff>=0.5",
]
ai = [
    "opencv-python-headless>=4.10",
    "ultralytics>=8.2",
]
mqtt = [
    "paho-mqtt>=2.1",
]

[project.scripts]
nest-ai-recorder = "nest_ai_recorder.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py312"

